Add package versions component

--- a/docs/docs/core/config/index.mdx
+++ b/docs/docs/core/config/index.mdx
@@ -1,5 +1,11 @@
+import PackageVersions from '@site/src/components/PackageVersions';
+
 # Tegral Config
 
 Tegral Config is an extension library that adds extra features on top of [Hoplite](https://github.com/sksamuel/hoplite).
 
 Tegral Config aims to supplement the "data class" model of defining configuration files by implementing [Hoplite decoders](https://github.com/sksamuel/hoplite#decoders) for custom classes. You can use such decoders in your own projects, although Tegral Config does not provide the necessary SPI "auto-registration" of decoders: you will need to add them manually to the `ConfigLoaderBuilder` object via `addDecoder(...)`.
+
+<PackageVersions libraries={[
+    { name: 'tegral-config-core', catalog: 'config.core' }
+]} />
