Turn some h3s into h2s

--- a/docs/docs/get-started/tutorial/step-1-hello-world.mdx
+++ b/docs/docs/get-started/tutorial/step-1-hello-world.mdx
@@ -47,7 +47,7 @@ Some of the next steps will depend on whether you chose Kotlin or Groovy for the
 
 :::
 
-## Setting up Tegral Catalog
+### Setting up Tegral Catalog
 
 [Tegral Catalog](/core/catalog/index.md) is a plugin that allows you to easily import Tegral libraries into your project.
 
@@ -92,7 +92,7 @@ dependencyResolutionManagement {
 </TabItem>
 </Tabs>
 
-## Configuring our application's build file
+### Configuring our application's build file
 
 Now that we have added Tegral Catalog, hop into the `app/build.gradle(.kts)` file.
 
@@ -201,7 +201,7 @@ class HelloController : KtorController() {
 }
 ```
 
-## Writing a `main` function
+### Writing a `main` function
 
 Go in the `App.kt` file and remove everything in the `main` function. Then, add a [`tegral` block](/web/appdsl/index.mdx#the-tegral-block):
 
