Add step 2 tutorial for adding di and tests

--- a/docs/docs/get-started/tutorial/step-1-hello-world.mdx
+++ b/docs/docs/get-started/tutorial/step-1-hello-world.mdx
@@ -5,6 +5,12 @@ import TabItem from '@theme/TabItem';
 
 Let's get started with our project! This step will cover setting up our Gradle build, some basic configuration and a Hello World endpoint.
 
+:::note
+
+In case you need it, the code you should get by the end of this tutorial is available [here](https://github.com/utybo/Tegral/tree/main/examples/tutorial/step-1).
+
+:::
+
 ## Prerequisites
 
 In order to follow this tutorial, you'll need some software:
