Update changelog and documentation

--- a/docs/docs/core/featureful/index.mdx
+++ b/docs/docs/core/featureful/index.mdx
@@ -10,12 +10,14 @@ Note that Tegral Featureful in itself is not an "application engine". It only al
     { name: 'tegral-featureful', catalog: 'featureful' }
 ]}/>
 
-## Defining features
+## What are features?
 
 Features are simply objects that act upon the dependency injection environment of an application. This generally means that:
 
-- Simpler features will simply `put()` things in the environment that applications will then be able to request and consume. An example of such a feature is [`tegral-logging`](/core/logging/index.mdx).
+- Simpler features will simply `put()` things in the environment that applications will then be able to request and consume.
 - More complex features will also add [DI extensions](/core/di/extensions/introduction.md) that will automatically discover and interact with other elements within the dependency injection environment.
+
+## Creating a feature
 
 Let's create a feature that just injects a dummy "Foo" object in the dependency injection environment. Features are defined by creating a feature object that implements the `Feature` interface.
 
@@ -35,11 +37,21 @@ object FooFeature : Feature {
 }
 ```
 
+### Metadata
+
 All features have an ID, a name and a description.
 
 - The ID of a feature should be unique across all features. The `tegral-` prefix is reserved for first-party features (i.e. features created by the Tegral team that are part of the Tegral repository).
 - The name of a feature is the human-readable name of the feature.
 - The description of a feature should be a short (approx. 1 sentence) description of what the feature does.
+
+A feature may also define a set of dependencies, which are features that will be installed together with the current feature. Defining dependencies is done by overriding the `dependencies` property:
+
+```kotlin
+override val dependencies = setOf(MyOtherFeature)
+```
+
+### Installation
 
 When using Tegral Web AppDSL, features can be installed using the `install(...)` syntax, i.e.:
 
@@ -55,7 +67,7 @@ fun main() {
 }
 ```
 
-### Configurable features
+## Configurable features
 
 Features can consume *configuration* if they need additional information to act upon the environment.
 
@@ -133,3 +145,14 @@ class Foo(scope: InjectionScope) {
 When defining features, you only need to define configuration sections. The application framework (e.g. Tegral Web AppDSL) will take care of defining the necessary root classes and instantiating the decoder.
 
 :::
+
+### Lifecycle features
+
+Features can `put` [services](../services/index.mdx) into the environment, which will be started like any other service. However, you sometimes need more control over the application's lifecycle, and need to be called back at specific points.
+
+The `LifecycleHookedFeature` interface provides a few functions that can help with that, including:
+
+- A callback for when the configuration is successfully loaded.
+- A callback just before starting all other services.
+
+You should almost always use services instead of lifecycle hooks, but it may be impossible to do otherwise sometimes.
