--- a/docs/docs/web/appdefaults/index.mdx
+++ b/docs/docs/web/appdefaults/index.mdx
@@ -16,6 +16,8 @@ It provides sane defaults for Web applications. Most notably:
 
 - It also provides a default [configuration class](/core/config/sections.md#defining-the-class), meaning that you do not have to define your own `Config` class if you intend on only using the `[tegral]` section.
 
+- It automatically configures the default loggers for a better out-of-the-box experience. For logger configuration, see the [Tegral Logging feature](/core/logging/index.mdx).
+
 The AppDefaults feature also has a dependency on the Tegral Services feature and on [Tegral Web Controllers](/web/controllers/index.mdx) and sets up the `[tegral.web]` configuration section (i.e. `WebConfiguration`)
 
 [AppDSL](/web/appdsl/index.mdx) automatically installs AppDefaults, meaning that you do not need to install AppDefaults yourself if you use AppDSL.
