Fix greeter docs

--- a/docs/docs/web/greeter/index.mdx
+++ b/docs/docs/web/greeter/index.mdx
@@ -5,7 +5,7 @@ import PackageVersions from '@site/src/components/PackageVersions';
 Tegral Web Greeter is a simple feature that prints a greeting message, including the Tegral version, just before all other services start.
 
 <PackageVersions libraries={[
-    { name: 'tegral-logging', catalog: 'logging' }
+    { name: 'tegral-web-greeter', catalog: 'web.greeter' }
 ]}/>
 
 
