--- a/docs/docs/modules/core/services/index.mdx
+++ b/docs/docs/modules/core/services/index.mdx
@@ -4,9 +4,9 @@ import PackageVersions from '@site/src/components/PackageVersions';
 
 Tegral Services is a simple API for defining startable and stoppable services.
 
-These services are simply classes that implement `TegralService` and that get put in a [services-enabled](/core/di/extensions/services.md) [Tegral DI](/core/di/index.mdx) environment
+These services are simply classes that implement `TegralService` and that get put in a [services-enabled](/modules/core/di/extensions/services.md) [Tegral DI](/modules/core/di/index.mdx) environment
 
-In order to make using services easier, Tegral Services also provides a feature (`ServicesFeature`) that automatically sets up the [Tegral DI services extension](/core/di/extensions/services.md) for you when enabled.
+In order to make using services easier, Tegral Services also provides a feature (`ServicesFeature`) that automatically sets up the [Tegral DI services extension](/modules/core/di/extensions/services.md) for you when enabled.
 
 <PackageVersions libraries={[
     { name: 'tegral-services-api', catalog: 'services.api' },
