--- a/docs/docs/modules/web/config/index.mdx
+++ b/docs/docs/modules/web/config/index.mdx
@@ -4,7 +4,7 @@ import PackageVersions from '@site/src/components/PackageVersions'
 
 Tegral Web Config is a simple library that only adds the `WebConfiguration` configuration section (i.e. what you use in `[tegral.web]`).
 
-The section is *not* added automatically to the environment by merely just adding this library as a dependency. You will need to have at least one feature referencing it. In the case of full Tegral Web applications, [AppDefaults](/web/appdefaults/index.mdx) handles this.
+The section is *not* added automatically to the environment by merely just adding this library as a dependency. You will need to have at least one feature referencing it. In the case of full Tegral Web applications, [AppDefaults](/modules/web/appdefaults/index.mdx) handles this.
 
 <PackageVersions libraries={[
     { name: 'tegral-web-config', catalog: 'web.config' }
