--- a/docs/docs/modules/core/logging/index.mdx
+++ b/docs/docs/modules/core/logging/index.mdx
@@ -20,7 +20,7 @@ install(LoggingFeature)
 
 :::info
 
-Tegral Logging is installed by default when using Tegral Web [AppDefaults](/web/appdefaults/index.mdx)/[AppDSL](/web/appdsl/index.mdx), requiring no additional action
+Tegral Logging is installed by default when using Tegral Web [AppDefaults](/modules/web/appdefaults/index.mdx)/[AppDSL](/modules/web/appdsl/index.mdx), requiring no additional action
 
 :::
 
