--- a/docs/docs/modules/web/greeter/index.mdx
+++ b/docs/docs/modules/web/greeter/index.mdx
@@ -11,7 +11,7 @@ Tegral Web Greeter is a simple feature that prints a greeting message, including
 
 ## Hide the message
 
-You can hide the welcome message using [Tegral Logging](/core/logging/index.mdx) to disable the logger:
+You can hide the welcome message using [Tegral Logging](/modules/core/logging/index.mdx) to disable the logger:
 
 ```toml title="/tegral.toml"
 [tegral.logging.loggers."tegral.greeter"]
