Add further documentation for OpenAPI

--- a/docs/docs/modules/core/openapi/index.mdx
+++ b/docs/docs/modules/core/openapi/index.mdx
@@ -4,10 +4,10 @@ import PackageVersions from '@site/src/components/PackageVersions';
 
 Tegral OpenAPI is a collection of libraries that allow you to:
 
-- Create [OpenAPI](https://openapis.org) definitions using a Kotlin DSL.
-- Define and parse `*.openapi.kts` scripts that embed said DSL and convert them to JSON or YAML using a CLI.
-- Define OpenAPI details of Ktor endpoints and serve OpenAPI and Swagger from Ktor applications.
-- Integrate OpenAPI support in Tegral Web applications.
+- Create [OpenAPI](https://openapis.org) definitions using a [Kotlin DSL](./dsl.md).
+- Define and parse [`*.openapi.kts` scripts](./scripting.md) that embed said DSL and convert them to JSON or YAML using a [CLI](./cli.md).
+- Define [OpenAPI details of Ktor endpoints](./ktor.md#describing-endpoints) and serve [OpenAPI](./ktor.md#serving-the-openapi-file) and [Swagger](./ktor.md#tegralswaggeruiktor-installation) from Ktor applications.
+- Integrate OpenAPI support in [Tegral Web](./tegral-web.md) applications.
 
 Tegral OpenAPI provides a concise Kotlin syntax for (most of) your OpenAPI needs.
 
